Bug 1272938 - Add js namespace prefix. r=terrence